--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     font-family: 'Roboto', sans-serif;
-}
-
-body {
-    background-color: #70c6c7;
 }
 
 .resume-contents {
@@ -20,131 +15,91 @@ body {
 }
 
 .left-section {
-    grid-column: span 2.5;
+    grid-column: span 2.8;
     height: 100%;
-    background-color: #00204A;
+    background-color: #0c072b;
 }
 
 .right-section {
-    grid-column: span 6;
+    grid-column: span 5;
     height: 100%;
-    background-color: #4B6982;
+    background-color: #999a9b;
     border-radius: 0px 60px 0px 0px;
 }
 
-.left-section-content{
+.left-section-contents{
     padding: 2rem 2rem;
 }
 
 .profile {
     width: 100%;
-    border-bottom: 2px solid #1B2631;
+    border-bottom: 2px solid #eeeeee;
 }
 
-.profile .profile-image {
+.profile-image {
     width: 100%;
-    border-radius: 50%;
-    border: 8px solid #1B2631;
+    border-radius: 100%;
 }
 
 .name {
     color: #D6DBDF;
-    font-size: 28px;
+    font-size: 20px;
     letter-spacing: 2px;
     text-transform: uppercase;
     text-align: center;
-    font-weight: bold;
-    padding: 1rem 0;
 }
 
 .profession {
-    color: #FDB44B;
-    font-size: 20px;
+    color: #eeeeee;
+    font-size: 16px;
+    margin-top: 1rem;
     text-transform: uppercase;
     text-align: center;
-    letter-spacing: 2px;
-    font-weight: bold;
-    padding-bottom: 1rem;
 }
 
 /* .contact-info { border-bottom: 2px solid #1B2631; } */
 .left-title {
-    color: #FDB44B;
+    color: #eeeeee;
     font-size: 20px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    padding-top: 3rem;
 }
 
-.contact-info ul {
-    padding-top: 1.5rem;
+.contact-info  {
+    padding-top: 1.0rem;
+    margin-top: 1.5rem;
+
 }
 
 .contact-info ul li,
 .references ul li {
-    padding: .4rem 0;
-    display: flex;
-    align-items: center;
-    color: #d6dbdfaf;
-    letter-spacing: 1px;
-    font-size: 18px;
+    padding: 0.4rem 0;
+    color: #eeeeee;
 }
 
 .contact-info ul li i,
 .references ul li i {
     padding-right: 1rem;
     font-size: 18px;
-    color: #2E86C1;
+    color: #eeeeee;
 }
 
-.skills ul {
+.skills  {
     padding-top: 1.5rem;
+    margin-top: 1.5rem;
+    
 }
 .skills ul li p {
     padding: .4rem 0;
-    color: #d6dbdfaf;
-    font-size: 18px;
-    letter-spacing: 1px;
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
+    color: #eeeeee;
+    margin-left: 1rem;
 }
-
-.referance-name {
-    padding-top: 1.5rem;
-    padding-bottom: .4rem;
-    font-size: 18px;
-    color: #F9E79F;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-.referance-profession {
-    font-size: 16px;
-    color: #d6dbdfaf;
-    letter-spacing: 1px;
-    /* text-transform: uppercase; */
-    padding-bottom: .4rem;
-}
-
 
 .right-section-contents {
     padding: 2rem 2rem;
 }
 
 .right-title {
-    color: #70C6C7;
-    font-size: 40px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    padding: 2rem 0;
-    position: relative;
+    color: #0e052d;
+    font-size: 24px;
 }
 
 .gap {
@@ -152,145 +107,47 @@ body {
 }
 .about-me-contents {
     font-size: 18px;
-    letter-spacing: 1px;
-    line-height: 2rem;
-    color: #F1F8FD;
+    color: #0e0d0d;
+    margin-top: 1.5rem;
 }
 
 .experience-contents,
 .education-contents,
 .awards-contents {
+    font-size: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
     color: #F1F8FD;
 }
+    
 
 .exp-company-name,
 .education-school-name,
 .awards-company-name {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #FDB44B;
-    padding-bottom: 0.4rem;
-    
+    margin-top: 1.5rem;
 }
 
 .exp-time-period,
 .educationp-time-period,
 .awards-time-period {
-    font-size: 18px;
-    letter-spacing: 1px;
-    line-height: 2rem;
+    font-size: 14px;
     
 }
 
 .exp-position,
 .education-subject,
 .awards-name {
-    font-size: 25px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #FDB44B;
-    padding-bottom: .4rem;
+    font-size: 20px;
+    margin-top: rem;
 }
 
 .exp-desc,
 .education-desc,
 .awards-desc {
     font-size: 16px;
-    letter-spacing: 1px;
-    line-height: 1.5rem;
-    border-left: 3px solid #a5a3a3;
     padding-left: 5px;
-}
-
-/* Media queries */
-@media screen and (max-width:780px) {
-    .experience-contents,
-    .education-contents,
-    .awards-contents {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media screen and (max-width:780px) {
-    .left-section {
-        grid-column: span 3;
-    }
-    
-    .right-section {
-        grid-column: span 4;
-    }
-    
-}
-
-@media screen and (max-width:1200px) {
-    .resume-contents {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media screen and (max-width:390px) {
-    .resume-contents {
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    .name {
-        font-size: 20px;
-    }
-
-    .profession {
-        font-size: 18px;
-    }
-
-    .left-title {
-        font-size: 18px;
-    }
-
-    .right-title {
-        font-size: 18px;
-    }
-
-    .contact-info ul li,
-    .references ul li {
-        font-size: 12px;
-    }
-
-    .contact-info ul li i,
-    .references ul li i {
-        /* padding-right: 1rem; */
-        font-size: 12px;
-    }
-
-    .skills ul li p {
-        font-size: 12px;
-    }
-
-    .about-me-contents {
-        font-size: 16px;
-        line-height: 1.5rem;
-    }
-
-    .exp-company-name,
-    .education-school-name,
-    .awards-company-name {
-        font-size: 18px;
-    }
-
-    .exp-time-period,
-    .educationp-time-period,
-    .awards-time-period {
-        font-size: 16px;
-    }
-
-    .exp-position,
-    .education-subject,
-    .awards-name {
-        font-size: 18px;
-    }
+    margin-top: 1.5rem;
 }
